<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bj"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="0.0px" >

        <LinearLayout
            android:id="@+id/feedback_back_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/back_layout_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:background="@drawable/arrow_back"
                android:gravity="center"
                android:includeFontPadding="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingLeft="6.0dip"
                android:singleLine="true"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/opinion_feedback"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_opinion"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_bg"
        android:gravity="top"
        android:hint="@string/opinion_feedback_hint"
        android:textSize="@dimen/small_text_size" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:background="@drawable/save_btn_selector"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size" />

</LinearLayout>