<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:gravity="center"
        android:id="@+id/textView"
        android:textColor="@color/blue"
        android:text="@string/exit_title"
        android:textSize="22dip"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/exit"
                android:paddingLeft="30dip"
                android:paddingRight="30dip"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/listview_selector"
                android:textSize="20dip"
                android:text="@string/exit" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:background="#ddaaaaaa"
            android:paddingBottom="5dip"
            android:layout_gravity="center"
            android:layout_height="13dp"
            android:paddingTop="5dip" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:paddingLeft="30dip"
                android:paddingRight="30dip"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                android:id="@+id/cancle"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/listview_selector"
                android:textSize="20dip"
                android:gravity="center"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>