<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/feedbackview"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/setting_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:padding="10dip" >

        <TextView
            style="@style/setting_textview"
            android:text="@string/opinion_feedback" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/arrow_more" />
    </RelativeLayout>

    <include layout="@layout/divider_line" />

    <RelativeLayout
        android:id="@+id/cleanview"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/setting_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:padding="10dip" >

        <TextView
            style="@style/setting_textview"
            android:text="@string/cleanCache" />

        <TextView
            android:id="@+id/cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/iv1"
            android:text="0M"
            android:textColor="@color/light_black"
            android:textSize="@dimen/small_text_size" />

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/arrow_more" />
    </RelativeLayout>

    <include layout="@layout/divider_line" />

    <RelativeLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/setting_selector"
        android:clickable="true"
        android:descendantFocusability="beforeDescendants"
        android:gravity="center_vertical"
        android:padding="10dip" >

        <TextView
            style="@style/setting_textview"
            android:layout_width="match_parent"
            android:text="@string/about" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/arrow_more" />
    </RelativeLayout>

    <include layout="@layout/divider_line" />

</LinearLayout>